test/MC/SVE/regression-tests/negative_tests/sve-ld1sh-013.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecS64CLoad2LSSZ
// Offset register Rm cannot be xzr
ld1sh z18.d, p3/z, [x27, xzr, lsl #1]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
